--- a/assets/scss/login.scss
+++ b/assets/scss/login.scss
@@ -1,13 +1,19 @@
 .full-banner-form{
+    background: url("../images/c6bank/hero-bg-xs.webp") no-repeat;
+    background-size: cover;
     width: 100%;
-    height: calc(100vh - 100px);
+    height: calc(100vh - 0px);
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #dddcda;
+
+
     .container-login {
-        width: 420px;
-        height: 40vh;
+        background-color: rgba(248, 243, 243, 0.651);
+        border-radius: 5%;
+        margin: 0%;
+        width: 400px;
+        height: 50vh; 
         display: flex;
         form {
             width: 100%;
@@ -15,6 +21,10 @@
             flex-direction: column;
             align-items: center;
             justify-content: space-around;
+            font-family: 'Open Sans';
+            text-decoration: none;
+            font-weight: bold;
+
             label {
                 width: 70%;
                 display: flex;
@@ -23,7 +33,17 @@
                     width: 100%;
                 }
             }
-            p { margin: 0;}
+            h1{
+                margin:0%;
+                font-size: 15px;
+
+            }
+
+            p { 
+                margin: 0;
+                font-size: 13px;
+                 
+            }
         }
     }
 }
