--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -27,6 +27,22 @@ header {
         }
     }
 }
+.text-header {
+    & div {
+        > svg { 
+            filter: invert(100%);
+        }
+    }
+    & nav {
+        > ul {
+            > li {
+                > a {
+                    filter: invert(100%);
+                }
+            } 
+        } 
+    }
+}
 section.full-banner {
     width: 100%;
     height: 100vh;
@@ -84,6 +100,7 @@ button {
     border: none;
     text-transform: uppercase;
 }
+
 button:hover{
     background: linear-gradient(150deg, #ffe668 0%, #ffdc5f 100%);
     box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2);
@@ -116,3 +133,4 @@ button:hover{
     width: auto;
     height: 24px;
 }
+
