--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -60,7 +60,6 @@ section.full-banner {
             margin: 0;
             line-height: 1.25em;
             margin-bottom: 20px;
-        
         }
         >h2, h3 {
             font-weight: 300;
@@ -78,12 +77,10 @@ section.full-banner {
         }
     }
 }
-
 ::selection{
     background: #ffe45c;
     color: #242424;
 }
-
 button.disabled {
     background: none;
     border: solid 0.5px rgba(36,36,36,0.2);
@@ -91,7 +88,6 @@ button.disabled {
 button.disabled:hover{
     background: rgba(36,36,36,0.2);
 }
-
 button {
     background: linear-gradient(150deg, #ffe45c 0%, #ffc900 100%);
     width: 190px;
@@ -100,14 +96,11 @@ button {
     border: none;
     text-transform: uppercase;
 }
-
 button:hover{
     background: linear-gradient(150deg, #ffe668 0%, #ffdc5f 100%);
     box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2);
     cursor: pointer;
 }
-
-
 .destak h3 > span {
     display: inline-block;
     line-height: 1.6em;
@@ -117,20 +110,19 @@ button:hover{
     padding: 0 3%;
     font-weight: bold;
 }
-
 @media(min-width:992px){
     section.full-banner {
         background: url("../images/c6bank/hero-bg.webp") no-repeat;
         background-size: cover;
     }
 }
-
 .jss4 .jss6 {
     fill: hsla(0,0%,14%,1);
 }
-
 .jss12 {
     width: auto;
     height: 24px;
 }
-
+.jss5 {
+    fill: hsla(0,0%,98%,1);
+}
